[gd_scene load_steps=3 format=3 uid="uid://dco8kgexf41et"]

[ext_resource type="Texture2D" uid="uid://bd3cdususrniv" path="res://icon.svg" id="1_im0tn"]
[ext_resource type="Script" uid="uid://bj7uk6yioygyr" path="res://block.gd" id="2_xfwl5"]

[node name="Block" type="TextureRect"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_im0tn")
expand_mode = 1
script = ExtResource("2_xfwl5")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
